--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
   "name": "polykey",
   "version": "0.0.1",
+  "author": "Roger Qiu",
   "description": "Polykey Core Library",
   "keywords": [
     "secrets"
   ],
-  "author": "Roger Qiu",
   "contributors": [
-    "Aaashwin Varshney"
+    "Aaashwin Varshney",
+    "Robert Cronin"
   ],
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/MatrixAI/js-polykey.git"
   },
-  "main": "dist/index.node.cjs.js",
-  "module": "dist/index.node.es.js",
+  "main": "dist/polykey.js",
+  "module": "dist/polykey.js",
   "scripts": {
-    "test": "ava -v",
-    "doc": "documentation build ./lib/** -f html -o ./doc",
-    "rollup": "rollup --config",
+    "develop": "webpack --mode=development --watch & webpack-dev-server --mode=development & wait",
+    "build": "webpack --mode='production'",
+    "test": "jest",
     "dos2unix": "dos2unix dist/*",
-    "build": "npm test && npm run doc && npm run rollup && npm run dos2unix"
+    "chmod": "chmod u+x dist/bin/*",
+    "doc": "documentation build ./lib/** -f html -o ./doc"
   },
-  "ava": {
-    "require": [
-      "@babel/register"
-    ]
+  "jest": {
+    "verbose": true
   },
   "engines": {
     "node": ">=8.7.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0",
     "bip39": "^2.5.0",
     "isomorphic-git": "^0.35.1",
     "kbpgp": "^2.0.82",
@@ -40,22 +39,23 @@
     "virtualfs": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "ava": "^0.25.0",
+    "@types/jest": "^25.0.0",
+    "@types/node": "^13.13.1",
+    "@types/lodash": "^4.5.0",
+    "threads-plugin": "^1.3.1",
+    "jest": "^25.0.0",
+    "ts-jest": "^25.0.0",
+    "ts-loader": "^6.2.2",
+    "ts-node": "^8.8.2",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.8.3",
     "documentation": "^8.1.2",
-    "rollup": "^0.65.0",
-    "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-commonjs": "^9.1.6",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.2.1",
-    "rollup-plugin-node-resolve": "^3.3.0"
-  }
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "bugs": {
+    "url": "https://github.com/MatrixAI/js-polykey/issues"
+  },
+  "homepage": "https://github.com/MatrixAI/js-polykey#readme"
 }
