--- a/package.json
+++ b/package.json
@@ -32,24 +32,44 @@
     "node": ">=8.7.0"
   },
   "dependencies": {
+    "@types/fs-extra": "^5.0.5",
+    "@types/jsonfile": "^5.0.0",
+    "@types/jest": "^25.0.0",
+    "@types/lodash": "^4.5.0",
+    "@types/node": "^13.13.1",
+    "@types/serialize-javascript": "^1.5.0",
+    "async-repl": "^0.4.0",
     "bip39": "^2.5.0",
+    "chalk": "^2.4.2",
+    "EncryptedFS": "file:../js-encryptedfs",
+    "encryptedfs": "0.0.2",
+    "fs-extra": "^7.0.1",
+    "is-valid-path": "^0.1.1",
     "isomorphic-git": "^0.35.1",
-    "kbpgp": "^2.0.82",
+    "jsonfile": "^5.0.0",
+    "kbpgp": "^2.1.0",
+    "lodash": "^4.17.11",
     "moniker": "^0.1.2",
-    "virtualfs": "^2.2.0"
+    "oclif": "^1.13.1",
+    "openpgp": "^4.5.1",
+    "threads": "1.4.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/jest": "^25.0.0",
-    "@types/node": "^13.13.1",
-    "@types/lodash": "^4.5.0",
+    "@types/debug": "^4.1.4",
+    "@types/node": "^11.13.7",
+    "@types/openpgp": "^4.4.4",
     "threads-plugin": "^1.3.1",
+    "debug": "^4.1.1",
+    "documentation": "^8.1.2",
+    "futoin-hkdf": "^1.0.3",
     "jest": "^25.0.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "ts-jest": "^25.0.0",
     "ts-loader": "^6.2.2",
     "ts-node": "^8.8.2",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3",
-    "documentation": "^8.1.2",
+    "virtualfs": "^2.2.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
