--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@types/jsonfile": "^5.0.0",
     "@types/jest": "^25.0.0",
     "@types/lodash": "^4.5.0",
-    "@types/node": "^13.13.1",
     "@types/serialize-javascript": "^1.5.0",
     "async-repl": "^0.4.0",
     "bip39": "^2.5.0",
@@ -56,12 +55,13 @@
     "commander": "^5.1.0",
     "openpgp": "^4.5.1",
     "threads": "1.4.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/commander": "^2.9.1",
     "@types/debug": "^4.1.4",
-    "@types/node": "^11.13.7",
+    "@types/node": "^13.13.1",
     "@types/openpgp": "^4.4.4",
     "threads-plugin": "^1.3.1",
     "debug": "^4.1.1",
