--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "kbpgp": "^2.1.0",
     "lodash": "^4.17.11",
     "moniker": "^0.1.2",
-    "commander": "^5.1.0",
     "openpgp": "^4.5.1",
     "threads": "1.4.0",
     "winston": "^3.2.1",
@@ -61,17 +60,20 @@
   "devDependencies": {
     "@types/commander": "^2.9.1",
     "@types/debug": "^4.1.4",
+    "@types/inquirer": "^6.5.0",
     "@types/node": "^13.13.1",
     "@types/openpgp": "^4.4.4",
-    "threads-plugin": "^1.3.1",
+    "commander": "^5.1.0",
     "debug": "^4.1.1",
     "documentation": "^8.1.2",
     "futoin-hkdf": "^1.0.3",
+    "inquirer": "^7.1.0",
     "jest": "^25.0.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "ts-jest": "^25.0.0",
     "ts-loader": "^6.2.2",
     "ts-node": "^8.8.2",
+    "threads-plugin": "^1.3.1",
     "typescript": "^3.8.3",
     "virtualfs": "^2.2.0",
     "webpack": "^4.42.1",
