WIP: add to package.json for vault sharing

--- a/package.json
+++ b/package.json
@@ -43,16 +43,25 @@
     "async-repl": "^0.4.0",
     "bip39": "^2.5.0",
     "chalk": "^2.4.2",
+    "delay": "^4.3.0",
     "EncryptedFS": "file:../js-encryptedfs",
     "encryptedfs": "0.0.2",
     "fs-extra": "^7.0.1",
     "is-valid-path": "^0.1.1",
     "isomorphic-git": "^0.35.1",
+    "pipe-ts": "^0.0.8",
     "jsonfile": "^5.0.0",
     "kbpgp": "^2.1.0",
+    "libp2p": "^0.27.7",
+    "libp2p-kad-dht": "^0.18.7",
+    "libp2p-mplex": "^0.9.5",
+    "libp2p-secio": "^0.12.4",
+    "libp2p-tcp": "^0.14.5",
     "lodash": "^4.17.11",
     "moniker": "^0.1.2",
+    "multiaddr": "^7.4.3",
     "openpgp": "^4.5.1",
+    "peer-info": "^0.17.5",
     "threads": "1.4.0",
     "winston": "^3.2.1",
     "zxcvbn": "^4.4.2"
