--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "fs-extra": "^7.0.1",
     "is-valid-path": "^0.1.1",
     "isomorphic-git": "^0.35.1",
+    "it-pipe": "^1.1.0",
     "pipe-ts": "^0.0.8",
     "jsonfile": "^5.0.0",
     "kbpgp": "^2.1.0",
     "libp2p": "^0.27.7",
+    "libp2p-bootstrap": "^0.10.4",
     "libp2p-kad-dht": "^0.18.7",
     "libp2p-mplex": "^0.9.5",
     "libp2p-secio": "^0.12.4",
@@ -62,6 +64,8 @@
     "multiaddr": "^7.4.3",
     "openpgp": "^4.5.1",
     "peer-info": "^0.17.5",
+    "streaming-iterables": "4.1.2",
+    "simple-get": "^3.1.0",
     "threads": "1.4.0",
     "winston": "^3.2.1",
     "zxcvbn": "^4.4.2"
