WIP: update collaborators

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "secrets"
   ],
   "contributors": [
-    "Aaashwin Varshney",
+    "Aashwin Varshney",
     "Robert Cronin"
   ],
   "license": "Apache-2.0",
