--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/serialize-javascript": "^1.5.0",
     "async-repl": "^0.4.0",
     "bip39": "^2.5.0",
+    "buffer": "^5.6.0",
     "chalk": "^2.4.2",
     "delay": "^4.3.0",
     "EncryptedFS": "file:../js-encryptedfs",
