--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "polykey": "./bin/index.js"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.0.3",
     "@types/fs-extra": "^5.0.5",
     "@types/jsonfile": "^5.0.0",
     "@types/jest": "^25.0.0",
@@ -46,7 +47,10 @@
     "fs-extra": "^7.0.1",
     "is-valid-path": "^0.1.1",
     "isomorphic-git": "^1.4.0",
+    "libp2p-kad-dht": "^0.18.7",
+    "multihashing-async": "^0.8.1",
     "peer-info": "^0.17.5",
+    "peer-id": "^0.13.12",
     "pipe-ts": "^0.0.8",
     "jsonfile": "^5.0.0",
     "kbpgp": "^2.1.0",
