WIP: add p2p code

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.0.3",
     "@types/fs-extra": "^5.0.5",
-    "@types/jsonfile": "^5.0.0",
     "@types/jest": "^25.0.0",
+    "@types/jsonfile": "^5.0.0",
     "@types/serialize-javascript": "^1.5.0",
     "async-repl": "^0.4.0",
     "bip39": "^2.5.0",
@@ -47,17 +47,20 @@
     "fs-extra": "^7.0.1",
     "is-valid-path": "^0.1.1",
     "isomorphic-git": "^1.4.0",
-    "libp2p-kad-dht": "^0.18.7",
-    "multihashing-async": "^0.8.1",
-    "peer-info": "^0.17.5",
-    "peer-id": "^0.13.12",
-    "pipe-ts": "^0.0.8",
+    "it-pipe": "^1.1.0",
     "jsonfile": "^5.0.0",
     "kbpgp": "^2.1.0",
+    "libp2p-kad-dht": "^0.18.7",
+    "mafmt": "^7.1.0",
     "multiaddr": "^7.4.3",
+    "multihashing-async": "^0.8.1",
     "openpgp": "^4.5.1",
-    "streaming-iterables": "4.1.2",
+    "peer-id": "^0.13.12",
+    "peer-info": "^0.17.5",
+    "pipe-ts": "^0.0.8",
     "simple-get": "^3.1.0",
+    "stream-to-it": "0.2.0",
+    "streaming-iterables": "4.1.2",
     "threads": "1.4.0",
     "winston": "^3.2.1",
     "zxcvbn": "^4.4.2"
