WIP: add multicast peer discovery

--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "bip39": "^2.5.0",
     "chalk": "^2.4.2",
     "delay": "^4.3.0",
+    "encryptedfs": "^0.1.0",
     "fs-extra": "^7.0.1",
     "is-valid-path": "^0.1.1",
     "isomorphic-git": "^1.4.0",
     "it-pipe": "^1.1.0",
     "jsonfile": "^5.0.0",
-    "kbpgp": "^2.1.0",
+    "kbpgp": "^2.1.15",
     "libp2p-kad-dht": "^0.18.7",
     "mafmt": "^7.1.0",
     "multiaddr": "^7.4.3",
