--- a/package.json
+++ b/package.json
@@ -41,25 +41,38 @@
     "@types/serialize-javascript": "^1.5.0",
     "async-repl": "^0.4.0",
     "bip39": "^2.5.0",
+    "buffer": "^5.6.0",
     "chalk": "^2.4.2",
+    "crc": "^3.8.0",
     "delay": "^4.3.0",
     "encryptedfs": "^0.1.0",
     "fs-extra": "^7.0.1",
+    "git-apply-delta": "0.0.7",
+    "git-list-pack": "0.0.10",
     "is-valid-path": "^0.1.1",
     "isomorphic-git": "^1.4.0",
     "it-pipe": "^1.1.0",
     "jsonfile": "^5.0.0",
     "kbpgp": "^2.1.15",
     "libp2p-kad-dht": "^0.18.7",
+    "locale2": "^2.3.1",
     "mafmt": "^7.1.0",
+    "marky": "^1.2.1",
     "multiaddr": "^7.4.3",
     "multihashing-async": "^0.8.1",
+    "nick": "^0.1.3",
     "openpgp": "^4.5.1",
     "p-event": "^4.1.0",
+    "pad": "^3.2.0",
+    "pako": "^1.0.11",
     "peer-id": "^0.13.12",
     "pipe-ts": "^0.0.8",
     "protobufjs": "^6.9.0",
+    "sha.js": "^2.4.11",
     "simple-get": "^3.1.0",
+    "simplest-i18n": "^1.0.0",
+    "split-buffer": "^1.0.0",
+    "stream-source": "^0.3.5",
     "stream-to-it": "0.2.0",
     "streaming-iterables": "4.1.2",
     "threads": "1.4.0",
