--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "isomorphic-git": "^1.5.0",
     "kbpgp": "^2.0.82",
     "node-forge": "^0.9.1",
+    "passport-oauth2": "^1.5.0",
     "protobufjs": "^6.9.0",
     "readable-stream": "^3.6.0",
     "threads": "^1.6.0",
