--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "isomorphic-git": "^1.5.0",
     "kbpgp": "^2.0.82",
     "keybase-bot": "^3.6.1",
+    "keybase-login": "^1.0.1",
+    "keybase-proofs": "^2.3.23",
     "node-forge": "^0.9.1",
     "protobufjs": "^6.9.0",
     "readable-stream": "^3.6.0",
