--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "configstore": "^5.0.1",
     "core-js": "^3.6.5",
     "encryptedfs": "^1.0.2",
-    "express": "^4.17.1",
     "futoin-hkdf": "^1.3.2",
     "google-auth-library": "^6.0.5",
     "google-protobuf": "^4.0.0-rc.2",
@@ -72,12 +71,13 @@
     "keybase-bot": "^3.6.1",
     "keybase-login": "^1.0.1",
     "keybase-proofs": "^2.3.23",
+    "nat-traversal": "^0.2.18",
     "node-forge": "^0.9.1",
+    "openssl": "^1.1.0",
     "protobufjs": "^6.9.0",
     "readable-stream": "^3.6.0",
-    "socket.io": "^2.3.0",
+    "stun": "^2.1.0",
     "threads": "^1.6.0",
-    "twilio": "^3.48.1",
     "virtualfs": "^2.2.0",
     "zxcvbn": "^4.4.2"
   },
@@ -108,7 +108,8 @@
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "wrtc": "^0.4.6"
   },
   "bugs": {
     "url": "https://github.com/MatrixAI/js-polykey/issues"
